model_deployment/deployment.yaml
# Creating MLflow deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-model-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-model-deployment
  template:
    metadata:
      labels:
        app: mlflow-model-deployment
    spec:
      containers:
        - name: mlflow-deployment
          image: liupengfei99/mlflow-deployment
          imagePullPolicy: Always
          command: ["mlflow", "models","serve"]
          args:
            - --host=0.0.0.0
            - --port=8000
            - --model-uri=models:/$(MLFLOW_MODEL_NAME)/$(MLFLOW_MODEL_STAGE)
            - --workers=8 # default Gunicorn worker process number is 4
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
