model_deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-model-service
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: mlflow-model-deployment
