model_deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-model-ingress
spec:
  tls:
    - hosts:
        - pokemon.lab.sspcloud.fr
  rules:
    - host: pokemon.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow-model-service
                port:
                  number: 8000
